# NUVIO

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Makefile  cmake_install.cmake  cmakelists.txt  compile_commands.json  package-lock.json  package.json  readme.md
.cache/clangd/index/: Tracy.hpp.05718C017A4A87BC.idx  TracyAlign.hpp.577F09658B940015.idx  TracyAlloc.cpp.2F7AB3577BFB77B0.idx  TracyAlloc.hpp.D480C6CB59B07C9A.idx  TracyApi.h.1D95BC6F0B243FBA.idx  TracyArmCpuTable.hpp.FB01D25AA7A9FFF9.idx  TracyC.h.2599281BCE2E88A0.idx  TracyCallstack.cpp.BD55A2ADB44700BD.idx  TracyCallstack.h.9D1CD86175A05006.idx  TracyCallstack.hpp.BAD8CEB5435615A1.idx  TracyClient.cpp.BE2C4988C1467A1E.idx  TracyColor.hpp.A25F20FE2263A055.idx  TracyCpuid.hpp.FE2618F7D1769747.idx  TracyDebug.hpp.95934A229E739232.idx  TracyDxt1.cpp.E987D7FE57D5FF13.idx  TracyDxt1.hpp.E8AA7823E86241C9.idx  TracyFastVector.hpp.61CDCE60B4412BE3.idx  TracyForceInline.hpp.A1E9AB6516E4D221.idx  TracyKCore.cpp.FFEA7BFE0F524B19.idx  TracyKCore.hpp.F10FF64CBA72753D.idx  TracyLock.hpp.CE1BA393E0484459.idx  TracyMutex.hpp.D0213969A5FE3226.idx  TracyOverride.cpp.5A379BDB7B23230A.idx  TracyProfiler.cpp.9E2AB284DBADCF6E.idx  TracyProfiler.hpp.D1D30BDDB5663C1E.idx  TracyProtocol.hpp.2687520317D712B4.idx  TracyQueue.hpp.C7BE37FCFD9C8562.idx  TracyRingBuffer.hpp.63FA5DEFB7101E0D.idx  TracyScoped.hpp.60980A4CE923B995.idx  TracySocket.cpp.B2C7410AC148693E.idx  TracySocket.hpp.D502DEC19AE44F6C.idx  TracyStackFrames.cpp.F818CFC9078A5639.idx  TracyStackFrames.hpp.20398C35E0295E9C.idx  TracyStringHelpers.hpp.4E34CCDCA548109C.idx  TracySysPower.cpp.1D1BFB7420B5EE9F.idx  TracySysPower.hpp.F7E6E701D3B901FB.idx  TracySysTime.cpp.09BDE4B4A41AACA8.idx  TracySysTime.hpp.5116EFD5055B128A.idx  TracySysTrace.cpp.9061414215B0E52E.idx  TracySysTrace.hpp.A039A8BD1A2A1F47.idx  (+250 more)
docs/: components.md  index.md  thankyou.md
docs/.vitepress/: config.mts
includes/internal/core/: nuvio.hpp  nuvio_namespaces.h
includes/internal/core/canvas/: irenderable.h  manager.h  shader.h
includes/internal/core/canvas/components/: properties.h  rectangle.h
includes/internal/core/canvas/utils/: shape_utils.h
includes/internal/core/dna/: project.h  project_manager.h
includes/internal/core/shortcut/: manager.h  registery.h
includes/internal/core/ui/: test.h  ui.h
includes/internal/core/ui/components/: comp.h  menu_item.h  registery.h
includes/internal/core/undo/: manager.h
includes/internal/core/utils/: texture.h  vector.h
includes/internal/core/window/: window_manager.h
shaders/: default_fragment.glsl  default_vertex.glsl
src/: main.cpp
src/core/: nuvio.cpp
src/core/canvas/: irenderable.cpp  manager.cpp  shader.cpp
src/core/canvas/components/: rectangle.cpp
src/core/project/: project_manager.cpp  projects.cpp
src/core/shortcut/: manager.cpp  registery.cpp
src/core/ui/: test_comp.cpp  theme.cpp  ui.cpp
src/core/ui/components/: registery.cpp
src/core/ui/editor/: layers.cpp  navbar.cpp  sidebar.cpp  tools.cpp  viewport.cpp
src/core/undo/: manager.cpp
src/core/utils/: shape_utils.cpp  texture.cpp
src/core/window/: window_manager.cpp
(+6 files in other folders)
